Bug fixing for jar file